--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "next": "15.3.3",
