--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "recharts": "^2.15.3",
