--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.18.1",
+    "html2canvas-pro": "^1.5.11",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
@@ -55,7 +57,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.3"
   }
 }
