--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "next": "15.3.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
