--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "framer-motion": "^12.18.1",
     "html2canvas-pro": "^1.5.11",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "next": "15.3.3",
