--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "moment": "^2.30.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
