--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,3 @@
-REACT_APP_ENV = "development"
+REACT_APP_ENV = development
+BACKEND_URL = https://app.siriusbi.com/api
+BACKEND_URL = http://localhost:3000
